[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
atoi = "2.0.0"
bytes = "1.3.0"
clap = { version = "4.5.47", features = ["derive"] }
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
